--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
   <body>
     <div class="main-content">
     {{>header}}
+    <p>This site was created by Martin Burke.  It uses data from WeatherStack.com and Mapbox.com</p>
     <img class="portrait" src="/img/me.jpg" />
     </div>
 
